4-ingress/nginx-ingress-security.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: nginx.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: nginx-clusterip
          servicePort: 80
        path: /
