4-ingress/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-html
spec:
  rules:
  - host: nginx.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: nginx-html
          servicePort: 80
        path: /html
